Create connection to the Google-keep database from server

--- a/server/package.json
+++ b/server/package.json
@@ -6,11 +6,12 @@
   "main": "server.js",
   "scripts": {
     "test": "npm test",
-    "start": "node server.js"
+    "start": "node --es-module-specifier-resolution=node server.js"
   },
   "author": "Gaddam Anjali",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "pg": "^8.3.0"
   }
 }
