--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "main": "server.js",
   "scripts": {
-    "test": "npm test",
+    "test": "jest",
     "start": "node --es-module-specifier-resolution=node server.js"
   },
   "author": "Gaddam Anjali",
@@ -13,5 +13,11 @@
   "dependencies": {
     "express": "^4.17.1",
     "pg": "^8.3.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.10.5",
+    "@babel/preset-env": "^7.10.4",
+    "jest": "^26.1.0",
+    "supertest": "^4.0.2"
   }
 }
