--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
   "main": "server.js",
   "scripts": {
     "test": "jest",
-    "start": "node --es-module-specifier-resolution=node server.js"
+    "start": "node --es-module-specifier-resolution=node server.js",
+    "dev": "nodemon --es-module-specifier-resolution=node --watch server.js"
   },
   "author": "Gaddam Anjali",
   "license": "ISC",
@@ -18,6 +19,7 @@
     "@babel/core": "^7.10.5",
     "@babel/preset-env": "^7.10.4",
     "jest": "^26.1.0",
+    "nodeman": "^1.1.2",
     "supertest": "^4.0.2"
   }
 }
