--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@babel/core": "^7.10.5",
     "@babel/preset-env": "^7.10.4",
+    "cors": "^2.8.5",
     "jest": "^26.1.0",
     "nodeman": "^1.1.2",
     "supertest": "^4.0.2"
